tests/fail/131-fail-as-binary-borrowed-non-u8-slice.rs
use df_derive::ToDataFrame;

#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad<'a> {
    #[df_derive(as_binary)]
    items: &'a [i32],
}

fn main() {}
